# cider-adventure-log

./: .gitignore  Dockerfile  Dockerfile.backend  README.md  app.py  docker-compose.yaml  flask_run.sh  main.py  nginx.conf  nginx.conf.bak  package-lock.json  package.json  pyproject.toml  pyproject.toml.bak  run_dev.fish  web.sh
api/: app.py
cider-app-ui/: README.md  package-lock.json  package.json
cider-app-ui/src/: App.vue  main.js
cider-app-ui/src/components/: AddRatingDialog.vue  ProductDetails.vue  ProductForm.vue  ProductTable.vue
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ProductDetails.vue  ProductForm.vue  ProductTable.vue
migrations/versions/: 1785cf887bf3_removes_type_attribute.py  1e95e9b5a6bd_modernize_sqlalchemy_classes.py  28ed2b97023f_.py  aec9b9e1edda_add_image_field_to_product_model.py
