[project]
name = "cider-adventure-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1,<4.0",
    "flask-cors~=5.0.1",
    "flask-migrate~=4.1",
    "flask-pyoidc>=3.14.3",
    "flask-sqlalchemy~=3.1",
    "pillow~=11.0",
    "psycopg2~=2.9.10",
    "pyzbar~=0.1.9",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
